--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Peregrine Falcon Discussion</title>
   <style>
     body {
       margin: 0;
@@ -47,6 +46,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
+      colour:#F2C029
     }
 
     .content.reveal {
