--- a/page2.html
+++ b/page2.html
@@ -126,8 +126,8 @@
         </ul>
         <img src="YOUR_IMAGE_URL_HERE.jpg" alt="Endangered Species" />
         <div class="button-container">
-            <button onclick="window.location.href='file:///Users/raghavvenkatiyer/Desktop/Peregrine%20Falcon%20Website%20Code/Peregrine%20Falcon%20Code.html';">Back to Main Page</button>
-            <button onclick="window.location.href='file:///Users/raghavvenkatiyer/Desktop/Peregrine%20Falcon%20Website%20Code/Page%203.html';">Go to Another Page</button>
+            <button onclick="window.location.href='index.html';">Back to Main Page</button>
+            <button onclick="window.location.href='page3';">Learn More About Conservation</button>
         </div>
     </div>
 </body>
