--- a/page3.html
+++ b/page3.html
@@ -128,8 +128,8 @@
         </ul>
         <img src="YOUR_IMAGE_URL_HERE.jpg" alt="Wildlife Conservation" />
         <div class="button-container">
-            <button onclick="window.location.href='file:///Users/raghavvenkatiyer/Desktop/Peregrine%20Falcon%20Website%20Code/Peregrine%20Falcon%20Code.html';">Back to Main Page</button>
-            <button onclick="window.location.href='file:///Users/raghavvenkatiyer/Desktop/Peregrine%20Falcon%20Website%20Code/Page%202%20.html';">Go to Page 2 </button>
+            <button onclick="index.html';">Back to Main Page</button>
+            <button onclick="page2.html';">Go to Page 2 </button>
         </div>
     </div>
 </body>
