--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 <script>
     
     var disqus_config = function () {
-    this.page.url = https://raghavvenkatiyer.github.io/Peregrine-/;
+    this.page.url = "https://raghavvenkatiyer.github.io/Peregrine-/";
     this.page.identifier = conservation-of-peregrine-falcon-pesticide.disqus.com; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
     };
     */
