--- a/index.html
+++ b/index.html
@@ -246,19 +246,19 @@
     </script>
           <div id="disqus_thread"></div>
 <div id="disqus_thread"></div>
-<script>
-    
-    var disqus_config = function () {
-    this.page.url = "https://raghavvenkatiyer.github.io/Peregrine-/";
-    this.page.identifier = conservation-of-peregrine-falcon-pesticide.disqus.com; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
-    */
-    (function() { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.src = 'https://conservation-of-peregrine-falcon-pesticide.disqus.com/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
-    })();
+<script>    
+var disqus_config = function () {
+  this.page.url = "https://raghavvenkatiyer.github.io/Peregrine-/";
+  this.page.identifier = "unique-page-identifier"; // Replace with a unique identifier
+};
+
+(function() { // DON'T EDIT BELOW THIS LINE
+  var d = document, s = d.createElement('script');
+  s.src = 'https://conservation-of-peregrine-falcon-pesticide.disqus.com/embed.js';
+  s.setAttribute('data-timestamp', +new Date());
+  (d.head || d.body).appendChild(s);
+})();
+
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
   <script>
