--- a/index.html
+++ b/index.html
@@ -246,20 +246,21 @@
     </script>
           <div id="disqus_thread"></div>
 <div id="disqus_thread"></div>
-<script>    
-var disqus_config = function () {
-  this.page.url = "https://raghavvenkatiyer.github.io/Peregrine-/";
-  this.page.identifier = "unique-page-identifier"; // Replace with a unique identifier
-};
+  
+  <script>
+  var disqus_config = function () {
+    this.page.url = "https://raghavvenkatiyer.github.io/Peregrine-/"; // Your page URL
+    this.page.identifier = "home-page-conservation-of-peregrine-falcon"; // Unique identifier for this page
+  };
 
-(function() { // DON'T EDIT BELOW THIS LINE
-  var d = document, s = d.createElement('script');
-  s.src = 'https://conservation-of-peregrine-falcon-pesticide.disqus.com/embed.js';
-  s.setAttribute('data-timestamp', +new Date());
-  (d.head || d.body).appendChild(s);
-})();
-
+  (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://conservation-of-peregrine-falcon-pesticide.disqus.com/embed.js'; // Correct shortname here
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+  })();
 </script>
+
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
   <script>
     // Handle button clicks
@@ -352,6 +353,6 @@ var disqus_config = function () {
       return "No valid response from AI";
     }
   </script>
-<script id="dsq-count-scr" src="//conservation-of-peregrine-falcon.disqus.com/count.js" async></script>
+<script id="dsq-count-scr" src="//conservation-of-peregrine-falcon-pesticide.disqus.com/count.js" async></script>
 </body>
 </html>
