--- a/index.html
+++ b/index.html
@@ -244,13 +244,11 @@
             }
         });
     </script>
-          <div id="disqus_thread"></div>
-<div id="disqus_thread"></div>
-  
+<div id="disqus_thread"></div>  
   <script>
   var disqus_config = function () {
-    this.page.url = "https://raghavvenkatiyer.github.io/Peregrine-/"; // Your page URL
-    this.page.identifier = "home-page-conservation-of-peregrine-falcon"; // Unique identifier for this page
+    this.page.url = 'https://raghavvenkatiyer.github.io/Peregrine-/'; // Your page URL
+    this.page.identifier = 'home-page-conservation-of-peregrine-falcon'; // Unique identifier for this page
   };
 
   (function() { // DON'T EDIT BELOW THIS LINE
@@ -258,10 +256,10 @@
     s.src = 'https://conservation-of-peregrine-falcon-pesticide.disqus.com/embed.js'; // Correct shortname here
     s.setAttribute('data-timestamp', +new Date());
     (d.head || d.body).appendChild(s);
-  })();
+})();
 </script>
-
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
   <script>
     // Handle button clicks
     document.addEventListener('click', function(event) {
