--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       font-weight: bold;
     }
 
-    .button-container {
+    .button-container [
       position: absolute;
       top: 20px;
       left: 50%;
@@ -259,7 +259,7 @@
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-
+<script id="dsq-count-scr" src="//conservation-of-peregrine-falcon-pesticide.disqus.com/count.js" async></script>
   <script>
     // Handle button clicks
     document.addEventListener('click', function(event) {
@@ -351,6 +351,5 @@
       return "No valid response from AI";
     }
   </script>
-<script id="dsq-count-scr" src="//conservation-of-peregrine-falcon-pesticide.disqus.com/count.js" async></script>
 </body>
 </html>
