--- a/index.html
+++ b/index.html
@@ -1,102 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<style>body { background-color: rgb(242, 192, 41); }</style>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Peregrine Falcon Discussion</title>
-  <style>
-  /* Style for bullet points */
-  .animated-list {
-    margin: 20px;
-    padding: 0;
-  }
-
-  .animated-list li {
-    font-size: 18px;
-    margin-bottom: 10px;
-    list-style-type: disc;
-    opacity: 0;
-    animation: fadeIn 1s ease forwards;
-  }
-
-  /* Stagger animation for bullet points */
-  .animated-list li:nth-child(1) { animation-delay: 0.2s; }
-  .animated-list li:nth-child(2) { animation-delay: 0.4s; }
-  .animated-list li:nth-child(3) { animation-delay: 0.6s; }
-  .animated-list li:nth-child(4) { animation-delay: 0.8s; }
-
-  @keyframes fadeIn {
-    from { opacity: 0; }
-    to { opacity: 1; }
-  }
-
-  /* Style for progress bar */
-  .progress-bar-container {
-    width: 100%;
-    background-color: #f3f3f3;
-    border-radius: 5px;
-    margin: 20px 0;
-    padding: 5px;
-  }
-
-  .progress-bar {
-    height: 20px;
-    width: 0;
-    background-color: #4caf50;
-    border-radius: 5px;
-    animation: loadProgress 3s ease forwards;
-  }
-
-  @keyframes loadProgress {
-    from { width: 0; }
-    to { width: 100%; }
-  }
-
-  /* Style for normal text */
-  .normal-text {
-    font-size: 16px;
-    margin: 20px 0;
-    line-height: 1.6;
-    color: #333;
-  }
-</style>
-
-<div>
-  <!-- Normal text before bullet points -->
-  <p class="normal-text">This is an introductory paragraph where you can start writing your content. Provide some background or explanation before diving into the bullet points below.</p>
-
-  <!-- Bullet points -->
-  <ul class="animated-list">
-    <li>Point 1: This is a placeholder for your first point or paragraph.</li>
-  </ul>
-
-  <!-- Normal text between bullet points -->
-  <p class="normal-text">Here you can add more detailed information about the first point, expanding on your ideas before moving to the next point.</p>
-
-  <!-- More bullet points -->
-  <ul class="animated-list">
-    <li>Point 2: Here goes more information, continuing with your topic.</li>
-  </ul>
-
-  <p class="normal-text">You can insert further explanations or examples to elaborate on the second point. Use this space for continuous discussion.</p>
-
-  <ul class="animated-list">
-    <li>Point 3: You can elaborate further with detailed information here.</li>
-  </ul>
-
-  <p class="normal-text">Expand your ideas in this section as well. Add relevant insights, facts, or examples.</p>
-
-  <ul class="animated-list">
-    <li>Point 4: Keep expanding on your content to reach the target word count.</li>
-  </ul>
-
-  <!-- Progress bar -->
-  <div class="progress-bar-container">
-    <div class="progress-bar"></div>
-  </div>
-</div>
-
   <style>
     body {
       margin: 0;
@@ -211,8 +117,8 @@
 
     .recaptcha-container {
       position: absolute;
-      bottom: 20px;
-      left: 20px; 
+      bottom: 120px;
+      left: 20px;
       z-index: 1003;
       text-align: center;
     }
@@ -224,7 +130,7 @@
 
     .chatbot-container {
       position: absolute;
-      bottom: 120px; /* Adjusted to avoid overlap with reCAPTCHA */
+      bottom: 20px; /* Adjusted to avoid overlap with reCAPTCHA */
       left: 0;
       width: 100%;
       background-color: #fff;
@@ -268,56 +174,280 @@
       display: flex; /* Flexbox to align input and button */
       gap: 10px;
     }
+
+    /* Added styles for Disqus */
+    .disqus-container {
+      width: 100%;
+      margin-top: 20px;
+      z-index: 1000; /* Ensure it's above other content */
+      position: fixed; /* Added for proper positioning */
+      bottom: 0; /* Place at the bottom of the page */
+      background-color: #fff;
+      padding: 20px;
+      opacity: 0; /* Initially hidden */
+      transition: opacity 0.5s ease-in-out;
+    }
+
+    .disqus-container.visible {
+      opacity: 1; /* Reveal when image is scrolled */
+    }
+
+    #disqus_thread {
+      width: 100%;
+    }
+
+    /* Ensure that the body fills the viewport */
+    body {
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+      margin: 0;
+      overflow: hidden;
+    }
+
+    /* Style the zoomed image so it doesn't overlap the Disqus */
+    .zoom-image.zoomed {
+      opacity: 0.5;
+      pointer-events: none;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transform: scale(1.2);
+      transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+      z-index: 1000;
+    }
+
+    .zoom-container {
+      position: relative;
+      height: 100vh;
+      overflow: hidden;
+    }
+
+    /* Ensure the Disqus container is below the main content */
+    .disqus-container.visible {
+      opacity: 1;
+      position: fixed;
+      bottom: 0;
+    }
+
+    /* Prevent the zoomed image from covering the Disqus */
+    .zoom-image.zoomed {
+      z-index: 999;
+    }
+
+    /* Style for progress bar */
+    .progress-bar-container {
+      width: 100%;
+      background-color: #f3f3f3;
+      border-radius: 5px;
+      margin: 20px 0;
+      padding: 5px;
+      opacity: 0;
+      transition: opacity 0.5s ease-in-out;
+    }
+
+    .progress-bar-container.visible {
+      opacity: 1;
+    }
+
+    .progress-bar {
+      height: 20px;
+      width: 0;
+      background-color: #4caf50;
+      border-radius: 5px;
+      animation: loadProgress 3s ease forwards;
+    }
+
+    @keyframes loadProgress {
+      from { width: 0; }
+      to { width: 100%; }
+    }
+
+    /* Style for normal text */
+    .normal-text {
+      font-size: 16px;
+      margin: 20px 0;
+      line-height: 1.6;
+      color: #333;
+      opacity: 0;
+      transition: opacity 0.5s ease-in-out;
+    }
+
+    .normal-text.visible {
+      opacity: 1;
+    }
+
+    .animated-list {
+      margin: 20px;
+      padding: 0;
+    }
+
+    .animated-list li {
+      font-size: 18px;
+      margin-bottom: 10px;
+      list-style-type: disc;
+      opacity: 0;
+      animation: fadeIn 1s ease forwards;
+    }
+
+    .animated-list li:nth-child(1) { animation-delay: 0.2s; }
+    .animated-list li:nth-child(2) { animation-delay: 0.4s; }
+    .animated-list li:nth-child(3) { animation-delay: 0.6s; }
+    .animated-list li:nth-child(4) { animation-delay: 0.8s; }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
   </style>
 </head>
-<body>
-  <div class="zoom-container">
-    <img src="peregrinefalcon.jpeg" alt="Your Image" class="zoom-image">
-    <div class="scroll-hint">
-      <div class="scroll-hint-icon">
-        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-          <polyline points="6 9 12 15 18 9"></polyline>
-        </svg>
+<body> 
+  <div class="zoom-container"> 
+    <img src="peregrinefalcon.jpeg" alt="Your Image" class="zoom-image"> 
+    <div class="scroll-hint"> 
+      <div class="scroll-hint-icon"> 
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"> 
+          <polyline points="6 9 12 15 18 9"></polyline> 
+        </svg> 
+      </div> 
+      <div class="scroll-hint-text">Scroll Down To Enter The World Of Peregrine Falcon</div> 
+    </div> 
+    <div class="content"> 
+      <div class="button-container"> 
+        <button onclick="window.location.href='page2.html';">Visit Page 2</button> 
+        <button onclick="window.location.href='page3.html';">Visit Page 3 </button> 
       </div>
-      <div class="scroll-hint-text">Scroll Down To Enter The World Of Peregrine Falcon</div>
-    </div>
-    <div class="content">
-      <div class="button-container">
-        <button onclick="window.location.href='file:///Users/raghavvenkatiyer/Desktop/Peregrine%20Falcon%20Website%20Code/Page%202%20.html';">Visit Page 2</button>
-        <button onclick="window.location.href='file:///Users/raghavvenkatiyer/Desktop/Peregrine%20Falcon%20Website%20Code/Page%203.html';">Visit Page 3 </button>
+
+      <!-- Normal text before bullet points -->
+      <p class="normal-text">This is an introductory paragraph where you can start writing your content. Provide some background or explanation before diving into the bullet points below.</p>
+
+      <!-- Bullet points -->
+      <ul class="animated-list">
+        <li>Point 1: This is a placeholder for your first point or paragraph.</li>
+      </ul>
+
+      <!-- Normal text between bullet points -->
+      <p class="normal-text">Here you can add more detailed information about the first point, expanding on your ideas before moving to the next point.</p>
+
+      <!-- More bullet points -->
+      <ul class="animated-list">
+        <li>Point 2: Here goes more information, continuing with your topic.</li>
+      </ul>
+
+      <p class="normal-text">You can insert further explanations or examples to elaborate on the second point. Use this space for continuous discussion.</p>
+
+      <ul class="animated-list">
+        <li>Point 3: You can elaborate further with detailed information here.</li>
+      </ul>
+
+      <p class="normal-text">Expand your ideas in this section as well. Add relevant insights, facts, or examples.</p>
+
+      <ul class="animated-list">
+        <li>Point 4: Keep expanding on your content to reach the target word count.</li>
+      </ul>
+
+      <!-- Progress bar -->
+      <div class="progress-bar-container">
+        <div class="progress-bar"></div>
       </div>
       
-      <div class="chatbot-container">
-        <div id="chat-container" class="chat-history"></div>
-        <div class="user-input-div">
-          <input type="text" placeholder="Chat with a bot" class="user-input" id="userprompt"/>
-          <button class="btn">Go</button>
-        </div>
+      <!-- Chatbot UI -->
+      <div id="chat-container" class="chat-history"></div>
+      <div class="user-input-div">
+        <input type="text" placeholder="Chat With Your Bot" class="user-input" id="userprompt"/>
+        <button class="btn">Go</button>
       </div>
+    </main>
 
-      <div class="recaptcha-container">
-        <div class="g-recaptcha" data-sitekey="YOUR_SITE_KEY_HERE"></div><br>
-        <div id="result"></div>
-      </div>
-
-    <div id="disqus_thread"></div>  
-    <script>
-      var disqus_config = function () {
-        this.page.url = 'https://raghavvenkatiyer.github.io/Peregrine-/'; // Your page URL
-        this.page.identifier = 'home-page-conservation-of-peregrine-falcon'; // Unique identifier for this page
-      };
-
-      (function() { // DON'T EDIT BELOW THIS LINE
-        var d = document, s = d.createElement('script');
-        s.src = 'https://conservation-of-peregrine-falcon-pesticide.disqus.com/embed.js'; // Correct shortname here
-        s.setAttribute('data-timestamp', +new Date());
-        (d.head || d.body).appendChild(s);
-      })();
+    <!-- Google Generative AI ChatBot Integration -->
+    <script type="importmap">
+      {
+        "imports": {
+          "@google/generative-ai": "https://esm.run/@google/generative-ai"
+        }
+      }
     </script>
-    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <script id="dsq-count-scr" src="//conservation-of-peregrine-falcon-pesticide.disqus.com/count.js" async></script>
+    <script type="module">
+      import { GoogleGenerativeAI } from "@google/generative-ai";
+      const API_KEY = "AIzaSyAKXi46TKHR6Ds-fIm3VUQVL2ZuEe8QcJY";
+      const genAI = new GoogleGenerativeAI(API_KEY);
 
-  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+      document.querySelector('.btn').addEventListener('click', run);
+
+      async function run() {
+        try {
+          const userInput = document.getElementById("userprompt").value;
+          if (userInput.trim() === "") return;
+
+          const userMessageDiv = createUserMessageDiv(userInput);
+          document.querySelector('.chat-history').appendChild(userMessageDiv);
+
+          const botMessageDiv = createBotMessageDiv("Thinking...");
+          document.querySelector('.chat-history').appendChild(botMessageDiv);
+
+          const model = genAI.getGenerativeModel({ model: "gemini-pro" });
+          const result = await model.generateContent(userInput);
+          const text = extractTextFromResponse(result.response);
+
+          const newBotMessageDiv = createBotMessageDiv(text);
+          document.querySelector('.chat-history').appendChild(newBotMessageDiv);
+        } catch (err) {
+          alert(err);
+        }
+      }
+
+      function extractTextFromResponse(response) {
+        if (response.candidates && response.candidates.length > 0) {
+          return response.candidates[0].content.parts.map(part => part.text || '').join('');
+        }
+        return "No valid response from AI";
+      }
+
+      function createUserMessageDiv(message) {
+        const div = document.createElement("div");
+        div.className = "message user-message";
+        div.textContent = `User: ${message}`;
+        return div;
+      }
+
+      function createBotMessageDiv(message) {
+        const div = document.createElement("div");
+        div.className = "message bot-message";
+        div.textContent = `Bot: ${message}`;
+        return div;
+      }
+    </script>
+
+    <div class="recaptcha-container">
+      <div class="g-recaptcha" data-sitekey="6LfSrlYqAAAAAKP7M7NlJMtchJUaFcuxnW0zfLgR"></div>
+      <button type="submit">Submit</button>
+    </div>
+
+    <div id="result"></div>
+  </div>
+
+  <div class="disqus-container">
+    <div id="disqus_thread"></div>
+  </div>  
+  <script>
+    var disqus_config = function () {
+      this.page.url = 'https://raghavvenkatiyer.github.io/Peregrine-/'; // Your page URL
+      this.page.identifier = 'home-page-conservation-of-peregrine-falcon'; // Unique identifier for this page
+    };
+
+    (function() { // DON'T EDIT BELOW THIS LINE
+      var d = document, s = d.createElement('script');
+      s.src = 'https://conservation-of-peregrine-falcon-pesticide.disqus.com/embed.js'; // Correct shortname here
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+    })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  <script id="dsq-count-scr" src="//conservation-of-peregrine-falcon-pesticide.disqus.com/count.js" async></script>
+
   <script>
     // Handle button clicks
     document.addEventListener('click', function(event) {
@@ -340,78 +470,28 @@
     const zoomImage = document.querySelector('.zoom-image');
     const content = document.querySelector('.content');
     const zoomContainer = document.querySelector('.zoom-container');
+    const disqusContainer = document.querySelector('.disqus-container'); // Get the Disqus container
+    const progressBarContainer = document.querySelector('.progress-bar-container');
+    const normalTextElements = document.querySelectorAll('.normal-text');
 
     zoomContainer.addEventListener('wheel', (event) => {
       if (event.deltaY > 0) {
         zoomImage.classList.add('zoomed');
         content.classList.add('reveal');
+        disqusContainer.classList.add('visible'); // Reveal Disqus when scrolled
+        progressBarContainer.classList.add('visible'); // Reveal progress bar
+        normalTextElements.forEach(text => text.classList.add('visible')); // Reveal normal text elements
       } else {
         zoomImage.classList.remove('zoomed');
         content.classList.remove('reveal');
+        disqusContainer.classList.remove('visible'); // Hide Disqus when scrolled back
+        progressBarContainer.classList.remove('visible'); // Hide progress bar
+        normalTextElements.forEach(text => text.classList.remove('visible')); // Hide normal text elements
       }
     });
 
-    function createBotMessageDiv(message) {
-      const div = document.createElement("div");
-      div.className = "message bot-message";
-      div.textContent = `Bot: ${message}`;
-      return div;
-    }
-
-    function createUserMessageDiv(message) {
-      const div = document.createElement("div");
-      div.className = "message user-message";
-      div.textContent = `You: ${message}`;
-      return div;
-    }
   </script>
-
-  <script type="importmap">
-    {
-      "imports": {
-        "@google/generative-ai": "https://esm.run/@google/generative-ai"
-      }
-    }
-  </script>
-  <script type="module">
-    import { GoogleGenerativeAI } from "@google/generative-ai";
-    const API_KEY = "AIzaSyAKXi46TKHR6Ds-fIm3VUQVL2ZuEe8QcJY";
-    const genAI = new GoogleGenerativeAI(API_KEY);
-
-    document.querySelector('.btn').addEventListener('click', run);
-
-    async function run() {
-      try {
-        const userInput = document.getElementById("userprompt").value;
-        if (userInput.trim() === "") return;
-
-        const userMessageDiv = createUserMessageDiv(userInput);
-        document.querySelector('.chat-history').appendChild(userMessageDiv);
-
-        const botMessageDiv = createBotMessageDiv("Thinking...");
-        document.querySelector('.chat-history').appendChild(botMessageDiv);
-
-        const model = genAI.getGenerativeModel({ model: "gemini-pro" });
-        const result = await model.generateContent(userInput);
-        const text = extractTextFromResponse(result.response);
-
-        const newBotMessageDiv = createBotMessageDiv(text);
-        document.querySelector('.chat-history').appendChild(newBotMessageDiv);
-      } catch (err) {
-        alert(err);
-      }
-    }
-
-    function extractTextFromResponse(response) {
-      if (response.candidates && response.candidates.length > 0) {
-        return response.candidates[0].content.parts.map(part => part.text || '').join('');
-      }
-      return "No valid response from AI";
-    }
-  </script>
-</body>
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+</div> 
+</body> 
 </html>
-
-
-
-
