--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
     .chat-history {
       max-height: 300px;
-      overflow-y: auto;
+ overflow-y: auto;
     }
 
     .user-input-div {
@@ -315,7 +315,7 @@
       </div> 
       <div class="scroll-hint-text">Scroll Down To Enter The World Of Peregrine Falcon</div> 
     </div> 
-    <div class="content"> 
+ <div class="content"> 
       <div class="button-container"> 
         <button onclick="window.location.href='page2.html';">Visit Page 2</button> 
         <button onclick="window.location.href='page3.html';">Visit Page 3 </button> 
@@ -409,7 +409,7 @@
       function createUserMessageDiv(message) {
         const div = document.createElement("div");
         div.className = "message user-message";
-        div.textContent = `User: ${message}`;
+        div.textContent = ` `User: ${message}`;
         return div;
       }
 
