--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
       function createUserMessageDiv(message) {
         const div = document.createElement("div");
         div.className = "message user-message";
-        div.textContent = ` `User: ${message}`;
+        div.textContent = `User: ${message}`;
         return div;
       }
 
