--- a/index.html
+++ b/index.html
@@ -4,16 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body {
-      margin: 0;
-      overflow: hidden; /* Prevent body scrolling */
-    }
+  body {
+  margin: 0;
+  overflow: hidden;
+  background-color: transparent; /* No background color for the body */
+}
 
-    .zoom-container {
-      position: relative;
-      height: 100vh;
-      overflow: hidden; /* Prevent scrolling of zoom container */
-    }
+.content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent; /* Keep transparent initially */
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out, background-color 0.5s ease-in-out;
+  z-index: 1001;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.content.reveal {
+  opacity: 1;
+  background-color: rgb(242, 192, 41); /* Apply yellow background when content is revealed */
+}
 
     .zoom-image {
       position: absolute;
@@ -28,8 +44,7 @@
 
     .zoom-image.zoomed {
       transform: scale(1.2);
-      opacity: 0.5;
-      pointer-events: none; /* Disable interaction with zoomed image */
+      opacity: 0; /* Fade out image */
     }
 
     .content {
@@ -46,6 +61,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
+      padding-top: 100px; /* Added padding to avoid overlap with buttons */
     }
 
     .content.reveal {
@@ -82,6 +98,26 @@
       100% {
         transform: translateY(0);
       }
+    }
+    .normal-text.visible {
+      opacity: 1;
+    }
+
+    /* Animation for text gaps */
+    .animated-gap {
+      background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 50%, rgba(255,0,0,0.5) 50%, rgba(255,0,0,0.5) 100%);
+      animation: colorChange 2s infinite;
+    }
+
+    @keyframes colorChange {
+      0% { background-color: rgba(255, 255, 255, 0); }
+ 50% { background-color: rgba(255, 0, 0, 0.5); }
+      100% { background-color: rgba(255, 255, 255, 0); }
+    }
+
+    @keyframes fadeIn {
+      0% { opacity: 0; }
+      100% { opacity: 1; }
     }
 
     .scroll-hint-text {
@@ -146,7 +182,7 @@
     }
 
     .user-message {
-      color: #333;
+      color: #333 ;
       background-color: #efb505;
     }
 
@@ -166,7 +202,7 @@
 
     .chat-history {
       max-height: 300px;
- overflow-y: auto;
+      overflow-y: auto;
     }
 
     .user-input-div {
@@ -174,69 +210,61 @@
       display: flex; /* Flexbox to align input and button */
       gap: 10px;
     }
+/* Added styles for Disqus */
+.disqus-container {
+    width: 90%; /* Adjusted width for a smaller size */
+    margin: 10px auto; /* Center the container with a smaller margin */
+    z-index: 1000; /* Ensure it's above other content */
+    position: fixed; /* Keep it fixed in place */
+    bottom: 100px; /* Positioned above the bottom, ensure it doesn't overlap with reCAPTCHA or chatbot */
+    background-color: #BFAE99;
+    padding: 5px; /* Reduced padding for smaller size */
+    opacity: 0; /* Initially hidden */
+    transition: opacity 0.5s ease-in-out; /* Fade in effect */
+}
 
-    /* Added styles for Disqus */
-    .disqus-container {
-      width: 100%;
-      margin-top: 20px;
-      z-index: 1000; /* Ensure it's above other content */
-      position: fixed; /* Added for proper positioning */
-      bottom: 0; /* Place at the bottom of the page */
-      background-color: #fff;
-      padding: 20px;
-      opacity: 0; /* Initially hidden */
-      transition: opacity 0.5s ease-in-out;
-    }
+/* Ensure Disqus becomes visible only after scrolling */
+.disqus-container.visible {
+    opacity: 1; /* Make Disqus fully visible when the class is added */
+}
 
-    .disqus-container.visible {
-      opacity: 1; /* Reveal when image is scrolled */
-    }
+/* Adjust the zoom image settings to ensure no overlap */
+.zoom-image.zoomed {
+    opacity: 0.5;
+    pointer-events: none; /* Ensure it doesn't block interactions */
+    position: absolute; /* Keep it absolute for proper layering */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transform: scale(1.2);
+    transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+    z-index: 998; /* Set z-index lower than Disqus */
+}
 
-    #disqus_thread {
-      width: 100%;
-    }
+/* Ensure the body fills the viewport */
+body {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    margin: 0;
+    overflow: hidden;
+}
 
-    /* Ensure that the body fills the viewport */
-    body {
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-      margin: 0;
-      overflow: hidden;
-    }
+.zoom-container {
+    position: relative;
+    height: 100vh;
+    overflow: hidden;
+}
 
-    /* Style the zoomed image so it doesn't overlap the Disqus */
-    .zoom-image.zoomed {
-      opacity: 0.5;
-      pointer-events: none;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      transform: scale(1.2);
-      transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
-      z-index: 1000;
-    }
+/* Ensure that the Disqus container is positioned correctly */
+.zoom-container .disqus-container {
+    position: fixed; /* Ensure it stays fixed */
+    bottom: 100px; /* Adjusted to stay above the bottom */
+    opacity: 1; /* Ensure it's fully visible */
+}
 
-    .zoom-container {
-      position: relative;
-      height: 100vh;
-      overflow: hidden;
-    }
-
-    /* Ensure the Disqus container is below the main content */
-    .disqus-container.visible {
-      opacity: 1;
-      position: fixed;
-      bottom: 0;
-    }
-
-    /* Prevent the zoomed image from covering the Disqus */
-    .zoom-image.zoomed {
-      z-index: 999;
-    }
 
     /* Style for progress bar */
     .progress-bar-container {
@@ -304,21 +332,21 @@
     }
   </style>
 </head>
-<body> 
-  <div class="zoom-container"> 
-    <img src="peregrinefalcon.jpeg" alt="Your Image" class="zoom-image"> 
-    <div class="scroll-hint"> 
-      <div class="scroll-hint-icon"> 
-        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"> 
-          <polyline points="6 9 12 15 18 9"></polyline> 
-        </svg> 
-      </div> 
-      <div class="scroll-hint-text">Scroll Down To Enter The World Of Peregrine Falcon</div> 
-    </div> 
- <div class="content"> 
-      <div class="button-container"> 
-        <button onclick="window.location.href='page2.html';">Visit Page 2</button> 
-        <button onclick="window.location.href='page3.html';">Visit Page 3 </button> 
+<body>
+  <div class="zoom-container">
+    <img src="peregrinefalcon.jpeg" alt="Your Image" class="zoom-image">
+    <div class="scroll-hint">
+ <div class="scroll-hint-icon">
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <polyline points="6 9 12 15 18 9"></polyline>
+        </svg>
+      </div>
+      <div class="scroll-hint-text">Scroll Down To Enter The World Of Peregrine Falcon</div>
+    </div>
+    <div class="content">
+      <div class="button-container">
+        <button onclick="window.location.href='page2.html';">Visit Page 2</button>
+        <button onclick="window.location.href='page3.html';">Visit Page 3 </button>
       </div>
 
       <!-- Normal text before bullet points -->
@@ -353,7 +381,7 @@
       <div class="progress-bar-container">
         <div class="progress-bar"></div>
       </div>
-      
+
       <!-- Chatbot UI -->
       <div id="chat-container" class="chat-history"></div>
       <div class="user-input-div">
@@ -409,7 +437,7 @@
       function createUserMessageDiv(message) {
         const div = document.createElement("div");
         div.className = "message user-message";
-        div.textContent = `User: ${message}`;
+        div.textContent = `:User  ${message}`;
         return div;
       }
 
@@ -481,12 +509,14 @@
         disqusContainer.classList.add('visible'); // Reveal Disqus when scrolled
         progressBarContainer.classList.add('visible'); // Reveal progress bar
         normalTextElements.forEach(text => text.classList.add('visible')); // Reveal normal text elements
+        document.body.classList.add('scrolled'); // Add the scrolled class to the body
       } else {
         zoomImage.classList.remove('zoomed');
         content.classList.remove('reveal');
         disqusContainer.classList.remove('visible'); // Hide Disqus when scrolled back
         progressBarContainer.classList.remove('visible'); // Hide progress bar
         normalTextElements.forEach(text => text.classList.remove('visible')); // Hide normal text elements
+        document.body.classList.remove('scrolled'); // Remove the scrolled class from the body
       }
     });
 
@@ -495,3 +525,6 @@
 </div> 
 </body> 
 </html>
+
+
+
