--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ body {
     <div id="result"></div>
   </div>
 
-  <div class="disqus-container">
+  <div class="disqus-container fixed-bottom bg-secondary bg-opacity-75 p-4 rounded mx-auto" style="width: 70%; height: 450px; overflow: auto; opacity: 0; z-index: 1001; transition: opacity 0.5s ease-in-out;">
     <div id="disqus_thread"></div>
   </div>  
   <script>
